2009-12-27  Ben Finney  <ben+python@benfinney.id.au>

	* (general): Add editor hints and formatting fixes for
	documentation.
	* setup.py: Declare correct dependency on Docutils.
	* doc/README.txt: Updates and corrections to dependency list.

2009-10-05  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.10 released.

2009-09-21  Ben Finney  <ben@benfinney.id.au>

	* Allow command-line specification of PID file path.

2009-09-20  Ben Finney  <ben@benfinney.id.au>

	* Manage ‘MANIFEST.in’ manually, under version control.
	* Use Distutils convention ‘test’ name for unit test directory.
	* Use conventional ‘LICENSE.GPL-2’ name for that file.
	* Provide a ‘README.txt’ symlink so Distutils finds it in the top
	  directory.
	* Use Distutils for primary project build system.

2009-06-21  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.9 released.

	* Use external ‘python-daemon’ library for well-behaved daemon
	  implementation.

2008-09-23  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.8 released.

	* Improvements to package build configuration.

2008-09-19  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.7 released.

	* Use RFC2616 as definition of HTTP response status codes.
	* Improvements to test suite.

2007-10-17  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.6 released.

	* Improvements to test suite.
	* Improvements to packaging automation.

2007-09-11  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.5 released.

	* Document installation process and usage.
	* Fix daemon program install location.

2007-09-11  Ben Finney  <ben@benfinney.id.au>

	Version 0.2.4 released.

	* Improvements to test suite.
	* Improvements to packaging automation.

2007-03-28  Ben Finney  <ben@benfinney.id.au>

	Version 0.2 released.

	* Package using setuptools.

2007-03-05  Ben Finney  <ben@benfinney.id.au>

	* Initial work on OpenID server.


Copyright © 2007–2009 Ben Finney <ben+python@benfinney.id.au>.

This work is free software: you are hereby free to redistribute this