@@ -6,7 +6,7 @@ A simple OpenID provider for local system accounts
 ==================================================
 
 :Author:    Ben Finney <ben+openid@benfinney.id.au>
-:Updated:   2009-12-27
+:Updated:   2010-01-20
 
 Gracie is an `OpenID`_ provider which authenticates users against
 local Unix system accounts.
@@ -80,7 +80,7 @@ PAM system::
 Copyright and License
 ---------------------
 
-Gracie is copyright © 2007–2009 Ben Finney <ben+openid@benfinney.id.au>.
+Gracie is copyright © 2007–2010 Ben Finney <ben+openid@benfinney.id.au>.
 
 This is free software; you may copy, modify and/or distribute this
 work under the terms of the `GNU General Public License`_, version 2
